@@ -1,3 +1,8 @@
+2004-03-21  Roger Sayle  <roger@eyesopen.com>
+
+	PR target/13889
+	* gcc.c-torture/compile/pr13889.c: New test case.
+
 2004-03-21  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/14616
