@@ -1,3 +1,9 @@
+2004-03-21  Roger Sayle  <roger@eyesopen.com>
+
+	PR target/13889
+	* cse.c (fold_rtx): Avoid substituting constants into unary
+	conversion operations.
+
 2004-03-21  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* frontends.texi: Add missing line.
